syntax = "proto3";
package types;

option go_package = "gitlab.com/thorchain/thornode/x/thorchain/types";

import "thorchain/v1/common/common.proto";
import "gogoproto/gogo.proto";

message MsgTradeAccountDeposit {
  common.Tx tx = 1 [(gogoproto.nullable) = false];
  common.Asset asset = 2 [(gogoproto.nullable) = false];
  string amount = 3 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Uint", (gogoproto.nullable) = false];
  bytes address = 4  [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
  bytes signer = 5  [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
}

message MsgTradeAccountWithdrawal {
  common.Tx tx = 1 [(gogoproto.nullable) = false];
  common.Asset asset = 2 [(gogoproto.nullable) = false];
  string amount = 3 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Uint", (gogoproto.nullable) = false];
  string asset_address = 4 [(gogoproto.casttype) = "gitlab.com/thorchain/thornode/common.Address"];
  bytes signer = 5 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
}
