syntax = "proto3";
package types;

option go_package = "gitlab.com/thorchain/thornode/x/thorchain/types";

import "gogoproto/gogo.proto";

message SwapperClout {
  string address = 1 [(gogoproto.casttype) = "gitlab.com/thorchain/thornode/common.Address"];
  string score = 2 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Uint", (gogoproto.nullable) = false];
  string reclaimed = 3 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Uint", (gogoproto.nullable) = false];
  string spent = 4 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Uint", (gogoproto.nullable) = false];
  int64 last_spent_height = 5;
  int64 last_reclaim_height = 6;
}
