syntax = "proto3";
package types;

option go_package = "gitlab.com/thorchain/thornode/x/thorchain/types";

import "thorchain/v1/common/common.proto";
import "gogoproto/gogo.proto";

message TradeAccount {
  common.Asset asset = 1 [(gogoproto.nullable) = false];
  string units = 2 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Uint", (gogoproto.nullable) = false];
  bytes owner = 3  [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
  int64 last_add_height = 4;
  int64 last_withdraw_height = 5;
}

message TradeUnit {
  common.Asset asset = 1 [(gogoproto.nullable) = false];
  string units = 2 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Uint", (gogoproto.nullable) = false];
  string depth = 3 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Uint", (gogoproto.nullable) = false];
}
